tests/NormalTests/paczka1/fuzzy1/42181773.err
Error in line 5: EUBNoo5Rlmc A678 -2,1
Error in line 6: jlGEfg26uki S827 55,2
Error in line 4: EUBNoo5Rlmc A678 31,5
Error in line 9: EUBNoo5Rlmc S7 87,8
Error in line 23: EUBNoo5Rlmc A509 96,4
Error in line 25: jlGEfg26uki A509 228,1
Error in line 32: A678 A678 64,5
